# cookiecutter-python

./: .prettierignore  Dockerfile  compose.yml  cookiecutter.json  readme.md
script/: bootstrap
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  contributing.md  pyproject.toml  readme.md  utils.sh
{{ cookiecutter.project_slug }}/script/: format  install  run
